--- a/development/terminalfour/src/sass/msu-partials/_homepage-news.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-news.scss
@@ -38,6 +38,9 @@ $primaryRed: #d11242;
     .feature-heading-large {
         color: $white;
         margin-bottom: 0;
+        .header-wrap {
+            display: inline;
+        }
         img {
             width: 200px;
             display: inline-block;
@@ -46,7 +49,54 @@ $primaryRed: #d11242;
         }
     }
 }
+@media (max-width: 1120px) {
+  #homepage-news .feature-heading-large {
+    &:before,
+    &:after {
+      content: '';
+      display: table;
+    }
 
+    &:after {
+      clear: both;
+    }
+
+    img {
+      width: 200px;
+      display: block;
+      float: left;
+    }
+
+    .header-wrap {
+      display: flex;
+      float: left;
+      width: calc(100% - 250px);
+      height: 200px;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      flex-direction: column;
+      justify-content: space-between;
+      span {
+        display: block;
+        font-size: 2rem;
+      }
+    }
+  }
+}
+@media (min-width: 620px) and (max-width: 1120px) {
+    #homepage-news .feature-heading-large {
+        img {
+            width: 250px;
+        }
+        .header-wrap {
+            width: calc(100% - 300px);
+            height: 250px;
+            span {
+                font-size: 3.125rem;
+            }
+        }
+    }
+}
 .home-news-features {
     @include make-xs-column(12);
     img {
