--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -58,6 +58,12 @@ section {
         padding: 0px 20px 5px 20px;
     }
 
+.possible-word-reversed {
+            color: #D11242;
+            background: #fff;
+            padding: 0px 20px 5px 20px;
+        }
+
 .start_your_possible{
   background-color:#D11242;
   color: white;
