--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -26,31 +26,31 @@ body {
     to {
        opacity: 1; }
 .fade-in {
-         animation: fadeIn ease 12s;
-         -webkit-animation: fadeIn ease 12s;
-         -moz-animation: fadeIn ease 12s;
-         -o-animation: fadeIn ease 12s;
-         -ms-animation: fadeIn ease 12s;
+          animation-delay: 10s;
+          -webkit-animation-delay: 10s;
+          -moz-animation-delay: 10s;
+         animation: fadeIn ease 5s;
+         -webkit-animation: fadeIn ease 5s;
+         -moz-animation: fadeIn ease 5s;
+         -o-animation: fadeIn ease 5s;
+         -ms-animation: fadeIn ease 5s;
        }
 
 section {
   height: 100vh;
-  padding-top:15%;
+  padding-top:20vh;
 }
 
 .introduction {
-  padding-top:10%;
-  padding:20px;
-}
+  padding-top:40vh;
 
-.introduction h1  {
+  h1  {
     font-size: 5rem;
     color: #00447c;
     text-align: center;
-    padding-top: 25%;
     font-weight: 700;
-    line-height: 5px;
   }
+}
 
 .possible-word {
         color: white;
