--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -1,5 +1,8 @@
 html {
   scroll-behavior: smooth;
+  animation-delay: 10s;
+  -webkit-animation-delay: 10s;
+  -moz-animation-delay: 10s;
 }
 
 body {
@@ -24,14 +27,11 @@ body p {
   opacity: 1;
 }
 .fade-in {
-  animation-delay: 10s;
-  -webkit-animation-delay: 10s;
-  -moz-animation-delay: 10s;
-  animation: fadeIn ease 5s;
-  -webkit-animation: fadeIn ease 5s;
-  -moz-animation: fadeIn ease 5s;
-  -o-animation: fadeIn ease 5s;
-  -ms-animation: fadeIn ease 5s;
+  animation: fadeIn ease 10s;
+  -webkit-animation: fadeIn ease 10s;
+  -moz-animation: fadeIn ease 10s;
+  -o-animation: fadeIn ease 10s;
+  -ms-animation: fadeIn ease 10s;
 }
 
 section {
@@ -47,6 +47,10 @@ section {
   color: #00447c;
   text-align: center;
   font-weight: 700;
+}
+.introduction .university-logo {
+  max-width: 400px;
+  margin-top: 20vh;
 }
 
 .possible-word {
@@ -64,7 +68,9 @@ section {
 .start_your_possible {
   background-color: #D11242;
   color: white;
-  height: 70vh;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+  height: auto;
 }
 .start_your_possible h2 {
   margin: 15px 0px;
@@ -75,7 +81,7 @@ section {
 }
 
 .possible-call-to-action {
-  background: url(../media/admissions-redesign/virtual-tour.jpg) no-repeat center center fixed;
+  background: url(../media/possible/open-house-student.jpg) no-repeat center center fixed;
   display: table;
   height: 800px;
   position: relative;
