cleans up footer

--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -114,8 +114,12 @@ padding:25px 30px;
 .footer{
   color: #00366A;
   background-color:#fff;
-  margin-top: 30px;
-  padding-top: 30px;
-  padding-bottom:20%;
+  margin-top: 10vh;
+  margin-bottom:5vh;
+
+
+  .possible-footer{
+    font-size: 3rem;
+  }
 
 }
