--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -104,9 +104,11 @@ section {
 .footer {
   color: #00366A;
   background-color: #fff;
-  margin-top: 30px;
-  padding-top: 30px;
-  padding-bottom: 20%;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+}
+.footer .possible-footer {
+  font-size: 3rem;
 }
 
 /*# sourceMappingURL=possible.css.map */
