adds pride graphic to possible

--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -87,6 +87,10 @@ section {
   }
 }
 
+.section-feels-like{
+margin-bottom: 15vh;
+}
+
 .possible-call-to-action {
   background: url(../media/possible/open-house-student.jpg) no-repeat center center fixed;
     display: table;
@@ -104,13 +108,16 @@ padding:25px 30px;
 
 }
 
+
+
+
 }
-.well {
-  color:#00366A;
-  // background-color: white;
-  // border: solid 2px #00366A;
-  padding: 15px;
-}
+// .well {
+//   color:#00366A;
+//   // background-color: white;
+//   // border: solid 2px #00366A;
+//   padding: 15px;
+// }
 .footer{
   color: #00366A;
   background-color:#fff;
