--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -30,9 +30,16 @@ body {
 
 
 
-@keyframes fadeIn
-    to {
-       opacity: 1; }
+  @keyframes fade-in{
+      from { opacity:0;}
+      to {opacity:1;}
+      }
+
+@-webkit-keyframes fade-in{
+    from {opacity:0;}
+    to {opacity:1;}
+    }
+
 .fade-in {
 
          animation: fadeIn ease 10s;
@@ -42,10 +49,30 @@ body {
          -ms-animation: fadeIn ease 10s;
        }
 
+       .fade-in-logo {
+
+                animation: fadeIn ease 10s;
+                -webkit-animation: fadeIn ease 10s;
+                -moz-animation: fadeIn ease 10s;
+                -o-animation: fadeIn ease 10s;
+                -ms-animation: fadeIn ease 10s;
+                -webkit-animation-delay: 10s; /* Safari 4.0 - 8.0 */
+                animation-delay: 10s;
+              }
+
+        .fade-in-caret {
+
+        -webkit-animation-name: fade-in;
+        -webkit-animation-duration: 5s;
+        -webkit-animation-delay: 15s;
+        animation-delay: 15s;
+
+ }
+
 section {
-  // height: 100vh;
-  padding-bottom:20vh;
-  padding-top:20vh;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+  height: auto;
 
 }
 
@@ -90,10 +117,17 @@ section {
 
 .start_your_possible{
   background-color:#D11242;
-  color: white;
   padding-top: 15vh;
   padding-bottom: 15vh;
   height: auto;
+  display: table;
+  position: relative;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 
   h2{
     margin: 15px 0px;
@@ -107,14 +141,14 @@ section {
 
 .section-feels-like {
  .container {
-   height: 100vh;
+   // height: auto;
    // padding-bottom: 20vh;
  }
 }
 .possible-call-to-action {
   background: url(../media/possible/open-house-student.jpg) no-repeat center center fixed;
     display: table;
-    height: 100vh;
+    height: auto;
     position: relative;
     width: 100%;
     -webkit-background-size: cover;
