--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -157,13 +157,15 @@ section {
     background-size: cover;
 
 .well{
-background:#ffffffbf;
+background:#ffffffde;
 padding:25px 30px;
+margin-top:15vh;
+margin-bottom:15vh;
 
 }
 
 .btn {
-    border: solid 1px #00447c;
+    border: solid 3px #00447c;
     padding: 20px;
     color:#00447c;
     font-size: 1.5rem;
@@ -171,14 +173,13 @@ padding:25px 30px;
 }
 
 .btn:hover {
-    border: solid 1px #fff;
+    border: solid 3px #00447c;
     padding: 20px;
     color:#fff;
     font-size: 1.5rem;
     border-radius: 0px;
     background:#00447c;
 }
-
 
 
 }
