--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -30,45 +30,6 @@ body {
 
 
 
-  @keyframes fade-in{
-      from { opacity:0;}
-      to {opacity:1;}
-      }
-
-@-webkit-keyframes fade-in{
-    from {opacity:0;}
-    to {opacity:1;}
-    }
-
-.fade-in {
-
-         animation: fadeIn ease 10s;
-         -webkit-animation: fadeIn ease 10s;
-         -moz-animation: fadeIn ease 10s;
-         -o-animation: fadeIn ease 10s;
-         -ms-animation: fadeIn ease 10s;
-       }
-
-       .fade-in-logo {
-
-                animation: fadeIn ease 10s;
-                -webkit-animation: fadeIn ease 10s;
-                -moz-animation: fadeIn ease 10s;
-                -o-animation: fadeIn ease 10s;
-                -ms-animation: fadeIn ease 10s;
-                -webkit-animation-delay: 10s; /* Safari 4.0 - 8.0 */
-                animation-delay: 10s;
-              }
-
-        .fade-in-caret {
-
-        -webkit-animation-name: fade-in;
-        -webkit-animation-duration: 5s;
-        -webkit-animation-delay: 15s;
-        animation-delay: 15s;
-
- }
-
 section {
   padding-top: 15vh;
   padding-bottom: 15vh;
@@ -87,25 +48,35 @@ section {
     font-weight: 700;
   }
 
-  .university-logo{
-    max-width: 200px;
-    margin-top: 10vh;
-  }
 
-  .possible-indicator{
-    color: #00447c;
-    display:block;
-    width:100px;
-    height: 100%;
-    margin: 0 auto;
 
-  }
+
 }
+
+.possible-indicator{
+  color: #00447c;
+  // display:block;
+  width:100px;
+  height: 100%;
+  // margin: 0 auto;
+  position: relative;
+    top: 10vh;
+}
+
+.university-logo{
+  width: 200px;
+  text-align:center;
+  margin-top: 10vh;
+}
+
+
+
 
 .possible-word {
         color: white;
         background: #D11242;
-        padding: 0px 15px 5px 15px;
+        padding: 0px 12px 5px 12px;
+        letter-spacing: 3.5px;
     }
 
 .possible-word-reversed {
@@ -168,15 +139,18 @@ margin-bottom:15vh;
     border: solid 3px #00447c;
     padding: 20px;
     color:#00447c;
-    font-size: 1.5rem;
+    font-size: 1rem;
     border-radius: 0px;
+    margin-top:15px;
+    margin-bottom:15px;
+
 }
 
 .btn:hover {
     border: solid 3px #00447c;
     padding: 20px;
     color:#fff;
-    font-size: 1.5rem;
+    font-size: 1rem;
     border-radius: 0px;
     background:#00447c;
 }
@@ -187,35 +161,24 @@ margin-bottom:15vh;
 .footer{
   color: #00366A;
   background-color:#fff;
-  margin-top: 10vh;
+  margin-top: 5vh;
   margin-bottom:5vh;
 
 
   .possible-footer{
     font-size: 3rem;
     font-weight: 700;
+    text-align: center;
+    margin-bottom: 25px;
+
+  }
+
+  .university-logo-footer{
+    width: 260px;
   }
 
 }
 
-@media only screen and (min-width: 992px){
-.introduction {
-    h1  {
-      font-size: 5rem;
-    }
-  }
-    // .university-logo{
-    //   max-width: 400px;
-    //   margin-top: 20vh;
-    //   padding-right: 10vw
-    // }
 
-    h2{
-      font-size: 2.5rem;
-    }
-
-    p {
-      font-size: 1.5rem;
-    }
-
-  }
+@import "possible-partials/possible-viewport-overrides.scss";
+@import "possible-partials/possible-animations.scss";
