fixed witdths for mobile and tablet

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -7,6 +7,10 @@
   .possible-word-reversed {
     margin-left: -2px;
   }
+
+  .possible-indicator {
+    top: 15vh;
+  }
 }
 @media only screen and (min-width: 992px) {
   .introduction {
