button fixes and anchor to start your possible

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -31,6 +31,7 @@
     font-size: 1.5rem;
   }
 
+  .possible-call-to-action{
   .btn {
     border: solid 3px;
     font-size: 1.5rem;
@@ -39,4 +40,5 @@
   .btn:hover {
     font-size: 1.5rem;
   }
+}
 }
