--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -25,6 +25,11 @@ body {
 
   p.copyright {
     font-size: 16px;
+    text-align:right;
+  }
+
+.copyright>a{
+    color:#00366A;
   }
 
 
@@ -67,6 +72,7 @@ section {
   width: 200px;
   text-align:center;
   margin-top: 10vh;
+  text-align: center!important;
 }
 
 
