--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -88,8 +88,8 @@ section {
 .possible-word-reversed {
             color: #D11242;
             background: #fff;
-            margin: 0px 5px;
-            padding: 0px 5px;
+            margin-right: 5px;
+            padding: 0px 12px 5px 12px;
         }
 
 .start_your_possible{
