fixes possible indicator on desktop

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -31,6 +31,10 @@
     font-size: 1.5rem;
   }
 
+  .possible-indicator {
+    top: 10vh;
+  }
+
   .possible-call-to-action{
   .btn {
     border: solid 3px;
