adds IE conditional

--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -1,3 +1,13 @@
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .well{
+  background:#fff;
+  }
+
+}
+
+
+
+
 html {
   scroll-behavior: smooth;
   animation-delay: 10s;
