--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -1,3 +1,8 @@
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .well {
+    background: #fff;
+  }
+}
 html {
   scroll-behavior: smooth;
   animation-delay: 10s;
