CSS Updates and Change Request

--- a/development/terminalfour/src/html/includes/content-types-main/page-content.html
+++ b/development/terminalfour/src/html/includes/content-types-main/page-content.html
@@ -1,18 +1,26 @@
-<a name="d.en.103378"></a>
-<div class="col-xs-12">
-<div class="content-inner">
-  <h2>Welcome To The WCMS Quick Fix Workshop!</h2>
-  <h3>Lets get some stuff done today.</h3>
-    <p>&nbsp;</p>
-<p><strong>Welcome Students</strong> to MSU Denver's Openhouse&zwnj;Welcome Students to MSU Denver's Openhouse&zwnj;&zwnj;Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. <a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a>&nbsp;jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.<a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a></p>
-<p><a href="https://msudenver.edu/media/content/officeoftheregistrar/ClassAdjustmentForm.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 297 KB">Class Adjustment Form</a></p>
-<p><a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">This document sample</a></p>
-<p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>
-<p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>
-<p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>
-<p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>
-<p>&nbsp;</p>
-<p>Denver</p>
-    <br>
-</div>
-</div>
+<!--<a name="d.en.103378"></a>-->
+<!--<div class="col-xs-12">-->
+<!--  <div class="content-inner">-->
+<!--    <h2>Welcome To The WCMS Quick Fix Workshop!</h2>-->
+<!--    <h3>Lets get some stuff done today.</h3>-->
+<!--    <p>&nbsp;</p>-->
+<!--    <p><strong>Welcome Students</strong> to MSU Denver's Openhouse&zwnj;Welcome Students to MSU Denver's Openhouse&zwnj;&zwnj;Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. <a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a>&nbsp;jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.<a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">Sample PDF</a></p>-->
+<!--    <p><a href="https://msudenver.edu/media/content/officeoftheregistrar/ClassAdjustmentForm.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 297 KB">Class Adjustment Form</a></p>-->
+<!--    <p><a href="/media/sampleassets/pdf-sample.pdf" target="_blank" data-toggle="tooltip" data-placement="top" title="PDF 7 KB">This document sample</a></p>-->
+<!--    <p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>-->
+<!--    <p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>-->
+<!--    <p>Souffl&eacute; jelly jujubes croissant brownie brownie tootsie roll marzipan. Jelly-o sweet roll jelly croissant. Sweet muffin toffee apple pie macaroon tart fruitcake. Tiramisu sweet roll chocolate cake caramels sweet roll fruitcake chupa chups cake.</p>-->
+<!--    <p>Croissant pastry apple pie chocolate bar cheesecake chocolate brownie. Fruitcake cheesecake lollipop donut cupcake. Macaroon pudding jujubes dessert macaroon oat cake carrot cake gummies. Powder muffin cotton candy croissant.</p>-->
+<!--    <p>&nbsp;</p>-->
+<!--    <p>Denver</p>-->
+<!--    <br>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!-- TEST HTML UPDATES -->
+@@include('content-types-main/test-html-updates/department-page-refresh.html')
+@@include('content-types-main/test-html-updates/department-page-refresh-degree.html')
+@@include('content-types-main/test-html-updates/experts-refresh.html')
+@@include('content-types-main/test-html-updates/experts-refresh-expanded.html')
+@@include('content-types-main/test-html-updates/department-page-refresh-contact.html')
+@@include('content-types-main/test-html-updates/department-page-refresh-faculty-staff.html')
