--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -3,22 +3,26 @@
   color: #fff;
   padding: 1.5em;
   margin-bottom: 1.5em;
-  background: #4e5462;
+  background: #ffffff;
   position: relative;
+  border: 1px solid #869CBB;
   // zoom: 1;
   // -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
   // -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
   // box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05)
 }
 .HighlightBox .HighlightBox-title {
-  color: #fff;
+  color: #717073;
   text-align: center;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 18px;
 }
 .HighlightBox .HighlightBox-content a {
-  color: #fff !important;
-  font-size: 1em
+  color: #000000 !important;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-decoration: underline;
 }
 
 .HighlightBox .img-responsive {
@@ -50,7 +54,7 @@
 }
 .HighlightBox hr {
   border: 0;
-  height: .059em;
-  background-color: #fff;
-  color: #fff
+  height: 1px;
+  background-color: #717073;
+  color: #717073;
 }
