--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -3,6 +3,7 @@
     text-align: left;
     white-space: normal;
     border: 0px solid transparent;
+    border-radius: 0;
 }
 
 .btn:hover {
@@ -28,6 +29,79 @@ transition: opacity 250ms ease-in-out;
   font-size: 1.0rem;
 }
 
+.custom-red-btn {
+  margin-bottom: 15px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #D11242 !important;
+  border: 2px solid #D11242 !important;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  padding: 32px 0;
+}
+.custom-red-btn:hover {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in-out;
+  color: #D11242;
+}
+.custom-blue-btn {
+  margin-bottom: 15px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #002855 !important;
+  border: 2px solid #002855 !important;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  padding: 32px 0;
+}
+.custom-blue-btn:hover {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in-out;
+  color: #002855;
+}
+.custom-grey-btn {
+  margin-bottom: 15px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #717073 !important;
+  border: 2px solid #717073 !important;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  padding: 32px 0;
+}
+.custom-grey-btn:hover {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in-out;
+  color: #717073;
+}
+.custom-black-btn {
+  margin-bottom: 15px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #000000 !important;
+  border: 2px solid #000000 !important;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  padding: 32px 0;
+}
+.custom-black-btn:hover {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in-out;
+  color: #000000;
+}
+
 .contact-info button {
 	float: left !important;
 }
@@ -35,9 +109,6 @@ transition: opacity 250ms ease-in-out;
 @media screen and (min-width: 768px) {
 	.contact-info-mobile {
 		display: none;
-	}
-	.contact-info button {
-		float: right !important;
 	}
 }
 
@@ -48,9 +119,5 @@ transition: opacity 250ms ease-in-out;
 @media screen and (min-width: 768px) {
   .contact-info-mobile {
     display: none;
-  }
-
-  .contact-info button {
-    float: right !important;
   }
 }
