--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -37,38 +37,38 @@ img.border {
   color: #888
 }
 
-
-
 }
 
 .content-inner {
 
   h2 {
   font-weight: 700;
-  color: #00447c;
-  font-size: 1.75rem;
+  color: #000000;
+  font-size: 22px;
   width: 100%;
   // margin: 0px;
-  margin-bottom:5px;
-  line-height: 1.3;
+  margin-bottom: 10px;
+  line-height: 22px;
   }
   h3 {
     color: #717073;
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin-bottom: 4px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 20px;
+    margin-bottom: 20px;
     margin-top: 2px
   }
   h4 {
     color: #000000;
-    font-size: 1.2rem;
-    font-weight: 700;
-    line-height: 1.3;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
   }
   h5 {
-    color: #535354;
-    font-size: 1.125em;
-    font-weight: 700;
+    color: #000000;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 800;
   }
   h6 {
     background-color: #005fae;
@@ -79,8 +79,10 @@ img.border {
     padding: 5px;
   }
   a {
-   color: #007dc3;
-   font-weight: 700
+    color: #007BC6;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
  }
   a:hover {
    // color: #003663;
@@ -93,4 +95,31 @@ ul li {
   left: 1em;
 }
 
+}
+
+.contact-form {
+  h2 {
+    font-weight: 700;
+    font-size: 18px;
+    color: #000000
+  }
+  h3 {
+    font-size: 16px;
+    font-weight: 700;
+    color: #717073;
+  }
+  legend {
+    border-bottom: 1px solid #879CBA;
+
+    h4 {
+      font-weight: 500;
+      font-size: 16px;
+      color: #000000;
+    }
+  }
+  .form-control {
+    border-radius: 0;
+    background-color: #ffffff;
+    border: 1px solid #CBCBCB;
+  }
 }
