--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -11,12 +11,24 @@
 .panel-default > .panel-heading {
     background: #717073;
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 18px;
+    font-weight: 700;
 }
 .panel-title {
     color: #fff;
     font-weight: 700;
     font-size: 24px;
+}
+.panel-body {
+  background-color: #EFEFEF;
+  border-color: #C3C3C3;
+}
+.panel-body a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration: underline;
+  color: #000000;
 }
 .panel-group {
   margin-bottom: 20px;
@@ -31,4 +43,68 @@
 
 .panel-danger {
     border: 1px solid #d63647;
+}
+
+.panel-slide{
+  border: 0;
+
+  .panel-heading {
+    background-color: #EBEBEB;
+    border: 0;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+
+    .panel-title {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 24px;
+      color: #002855;
+      text-align: left;
+
+      i.fa-chevron-down {
+        font-size: 40px;
+        margin-top: -0.5rem;
+      }
+    }
+  }
+
+  .panel-body {
+    background-color: #EFEFEF;
+    text-align: left;
+
+    .content-inner {
+      display: table;
+
+      .content-img {
+        width: 40%;
+        float: left;
+        padding: 1rem;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+      .content-words {
+        width: 60%;
+        float: right;
+        padding: 1rem;
+
+        h3 {
+          font-weight: 700;
+          font-size: 22px;
+          color: #002855;
+          margin-bottom: 0;
+        }
+        h4 {
+          font-weight: 700;
+          font-size: 16px;
+          color: #717073;
+        }
+        hr {
+          border-top: 1px solid #879CBA;
+        }
+      }
+    }
+  }
 }
