--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -34,9 +34,12 @@
 @import "ContentTypes/button-styles";
 @import "ContentTypes/variables";
 @import "ContentTypes/programs";
+@import "ContentTypes/quote-content";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
+@import "ContentTypes/tabs";
+@import "ContentTypes/well";
 // @import "ContentTypes/AdmissionsStyles";
 @import "ContentTypes/PresidentMessages";
 @import "ContentTypes/HighlightBox";
