--- a/www-root/includes/site-header.html
+++ b/www-root/includes/site-header.html
@@ -1,6 +1,6 @@
   <!-- SITE HEADER -->
     <div class="col-xs-12 siteheader" id="site-header">
-          <h1>Newsroom</h1>
-          <h1><t4 type='navigation' id='101' /></h1>
+          <h1>Department Page Refresh - Two Column Layout</h1>
+          <!-- <h1><t4 type='navigation' id='101' /></h1> -->
     </div>
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
