Added fixes to hover transition effects, new social icons and minor css updates

--- a/development/terminalfour/src/html/includes/homepage/homepage-news.html
+++ b/development/terminalfour/src/html/includes/homepage/homepage-news.html
@@ -29,7 +29,8 @@
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h3 class="feature-heading news-feature-heading">Redefining working class</h3>
+                                 <h3 class="feature-heading news-feature-heading">Redefining working class redefining
+                                   working class</h3>
                                  <h4>Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
