--- a/development/terminalfour/src/sass/ContentTypes/_well.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_well.scss
@@ -83,6 +83,11 @@
 
 .social_well {
   border-color: #D6DEEA !important;
+
+  img {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 @media (min-width: 768px) {
