--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -104,6 +104,12 @@
         hr {
           border-top: 1px solid #879CBA;
         }
+        p {
+          font-size: 16px;
+          line-height: 24px;
+          color: #000000;
+          font-weight: 700;
+        }
       }
     }
   }
